k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-api
  labels:
    app: book-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: book-api
  template:
    metadata:
      labels:
        app: book-api
    spec:
      containers:
        - name: book-api
          image: romanzhula/book-api:1.0.0
          ports:
            - containerPort: 8080
