k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-api
spec:
  selector:
    app.kubernetes.io/name: book-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
